[appBuilder] 多版本和结构优化 (#210)
Co-authored-by: wuayee <wuayee@noreply.gitcode.com>